--- a/src/main/resources/templates/pages/index.html
+++ b/src/main/resources/templates/pages/index.html
@@ -46,29 +46,31 @@
                 <li class="layui-nav-item layui-nav-itemed">
                     <a class="" href="javascript:;">系统管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a th:href="@{/hello1.html}">用户管理</a></dd>
+                        <dd><a url="/sys/sysUser/userIndex" href="#">用户管理</a></dd>
                         <dd><a href="javascript:;">部门管理</a></dd>
                         <dd><a href="javascript:;">角色管理</a></dd>
-                        <dd><a href="">超链接</a></dd>
-                    </dl    >
+                        <dd><a href="#">超链接</a></dd>
+                    </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">解决方案</a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;">列表一</a></dd>
                         <dd><a href="javascript:;">列表二</a></dd>
-                        <dd><a href="">超链接</a></dd>
+                        <dd><a href="#">超链接</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a href="">云市场</a></li>
-                <li class="layui-nav-item"><a href="">发布商品</a></li>
+                <li class="layui-nav-item"><a href="#">云市场</a></li>
+                <li class="layui-nav-item"><a href="#">发布商品</a></li>
             </ul>
         </div>
     </div>
 
     <div class="layui-body">
         <!-- 内容主体区域 -->
-        <div style="padding: 15px;">内容主体区域</div>
+        <div class = "main-content" style="padding: 15px;">
+            <iframe src="/sys/sysUser/userIndex" id="" style="width: 100%; height: 500px;" frameborder="0"></iframe>
+        </div>
     </div>
 
     <div class="layui-footer">
@@ -80,9 +82,17 @@
 <script>
     //JavaScript代码区域
     layui.use('element', function(){
-        var element = layui.element;
+        var element = layui.element,
+            $ = layui.jquery;
 
+        $(".layui-nav-child a").click(function () {
+            var url = $(this).attr("url") || '/layui/noPage';
+            console.log(url)
+            $(".main-content").html('<iframe src=' + url + ' id="" style="width: 100%; height: 500px;" frameborder="0"></iframe>');
+        })
     });
+
+
 </script>
 </body>
 </html>
