删除无用代码

--- a/src/main/resources/templates/pages/noPage.html
+++ b/src/main/resources/templates/pages/noPage.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>Hello World</h1>
-
+    <h2>没有页面</h2>
 	
 	<!--<script type="text/javascript" src="/js/testjs.js"></script>-->
 </body>
