--- a/src/main/resources/templates/pages/index.html
+++ b/src/main/resources/templates/pages/index.html
@@ -69,7 +69,7 @@
     <div class="layui-body">
         <!-- 内容主体区域 -->
         <div class = "main-content" style="padding: 15px;">
-            <iframe src="/sys/sysUser/userIndex" id="" style="width: 100%; height: 500px;" frameborder="0"></iframe>
+            <iframe src="/sys/sysUser/userIndex" id="" style="width: 100%; height: 700px;" frameborder="0"></iframe>
         </div>
     </div>
 
@@ -86,9 +86,9 @@
             $ = layui.jquery;
 
         $(".layui-nav-child a").click(function () {
-            var url = $(this).attr("url") || '/layui/noPage';
+            var url = $(this).attr("url") || '/noPage';
             console.log(url)
-            $(".main-content").html('<iframe src=' + url + ' id="" style="width: 100%; height: 500px;" frameborder="0"></iframe>');
+            $(".main-content").html('<iframe src=' + url + ' id="" style="width: 100%; height: 700px;" frameborder="0"></iframe>');
         })
     });
 
